# lattice

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.claude/commands/: create_branch.md  create_issue.md  create_pr.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  default.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.notes/: STRATEGY.md  TECHNICAL-VISION.md
accrue/: __init__.py  providers.py
accrue/core/: __init__.py  cache.py  checkpoint.py  config.py  enricher.py  exceptions.py  hooks.py
accrue/data/: __init__.py  fields.py
accrue/pipeline/: __init__.py  pipeline.py
accrue/schemas/: __init__.py  base.py  enrichment.py  field_spec.py  grounding.py
accrue/steps/: __init__.py  base.py  function.py  prompt_builder.py
accrue/steps/providers/: __init__.py  anthropic.py  google.py  openai.py
accrue/utils/: __init__.py  web_search.py
docs/: NEW_STRUCTURE.md  api-reference.md  configuration.md  github-standards.md
docs/decisions/: 001-pipeline-run-sole-api.md  002-fields-on-steps.md  003-column-oriented-execution.md  004-llmclient-protocol.md  005-functionstep-escape-hatch.md  006-sqlite-input-hash-cache.md  007-cache-checkpoint-separate.md  008-hooks-on-run.md  009-structured-outputs-auto-detect.md  010-no-eval-tooling.md  011-conditional-step-predicates.md  012-provider-grounding.md  013-rename-lattice-to-accrue.md  README.md
docs/instructions/: ARCHITECTURE_REFERENCE.md  PIPELINE_DESIGN.md  REFACTORING_PLAN.md
docs/research/: prompt-engineering.md
examples/: README.md  conditional_steps.ipynb  demo.ipynb  field_categories.csv  field_categories_v2.csv  sample_data.csv  test_web_enrichment.py
lattice/: __init__.py  providers.py
lattice/chains/: __init__.py  llm.py  web_enriched.py
lattice/core/: __init__.py  cache.py  checkpoint.py  config.py  enricher.py  exceptions.py  hooks.py  processors.py
lattice/data/: __init__.py  fields.py
lattice/pipeline/: __init__.py  pipeline.py
lattice/schemas/: __init__.py  base.py  enrichment.py  field_spec.py  grounding.py  structured.py
lattice/steps/: __init__.py  base.py  function.py  llm.py  prompt_builder.py  schema_builder.py
lattice/steps/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
lattice/utils/: __init__.py  logger.py  web_search.py
lattice/vector_store/: document_manager.py  document_processor.py  vector_store.py  vector_store_init.py
tests/: __init__.py  test_cache.py  test_cache_integration.py  test_checkpoint.py  test_conditional_steps.py  test_enricher.py  test_enrichment.py  test_error_handling.py  test_field_spec.py  test_function_step.py  test_grounding.py  test_hooks.py  test_json_parsing.py  test_llm_step.py  test_pipeline.py  test_pipeline_run.py  test_prompt_builder.py  test_providers.py  test_schema_builder.py  test_schemas.py  test_step_protocol.py  test_structured_integration.py  test_web_enriched_chain.py  test_web_search.py
