[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "accrue"
version = "1.0.0"
authors = [
  { name="Accrue Team", email="team@accrue.dev" },
]
description = "A composable pipeline engine for structured data enrichment using LLMs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=1.0.0"]
google = ["google-genai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ipykernel>=6.0",
]
all = [
    "accrue[anthropic]",
    "accrue[google]",
    "accrue[dev]",
]

[project.urls]
"Homepage" = "https://github.com/matt-house-e/lattice"
"Bug Reports" = "https://github.com/matt-house-e/lattice/issues"
"Source" = "https://github.com/matt-house-e/lattice"
"Documentation" = "https://github.com/matt-house-e/lattice#readme"

[tool.hatch.version]
path = "accrue/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["accrue"]

[tool.hatch.build.targets.sdist]
include = [
    "accrue/",
    "accrue/py.typed",
    "tests/",
    "examples/",
    "docs/",
    "README.md",
    "pyproject.toml",
]

# Development tools configuration
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "tqdm.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v"
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async",
]
